# server/src/main/java/io/swagger/trade/server/jersey/api/impl/DataValuesApiServiceImpl.java
@@ -17,12 +17,10 @@
 package io.swagger.trade.server.jersey.api.impl;
 
 import de.slub.urn.URNSyntaxException;
-import io.swagger.trade.server.jersey.api.ApiResponseMessage;
 import io.swagger.trade.server.jersey.api.DataValuesApiService;
 import io.swagger.trade.server.jersey.api.NotFoundException;
 import io.swagger.trade.server.jersey.api.util.ResourceTransformationUtils;
-import io.swagger.trade.server.jersey.model.DataValue;
-import io.swagger.trade.server.jersey.model.DataValueRequest;
+import io.swagger.trade.server.jersey.model.*;
 import org.trade.core.data.management.DataManager;
 
 import javax.ws.rs.core.Response;
@@ -30,6 +28,9 @@ import javax.ws.rs.core.SecurityContext;
 import javax.ws.rs.core.UriBuilder;
 import javax.ws.rs.core.UriInfo;
 import java.net.URI;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 @javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2017-01-31T17:07:23.956+01:00")
 public class DataValuesApiServiceImpl extends DataValuesApiService {
@@ -40,18 +41,32 @@ public class DataValuesApiServiceImpl extends DataValuesApiService {
 
         org.trade.core.model.data.DataValue value = null;
         try {
-            value = DataManager.getInstance().registerDataValue
-                    (ResourceTransformationUtils.resource2Model
-                            (body));
+            // Check if createdBy is specified since this is a mandatory attribute because it can not be changed
+            // after creation of the data value
+            if (body.getCreatedBy() == null || body.getCreatedBy().isEmpty()) {
+                response = Response.status(Response.Status.BAD_REQUEST).entity(new InvalidInput()
+                        .message("The 'createdBy' attribute in parameter 'body' is required but missing in the " +
+                                "processed request.").example("{\n" +
+                                "  \"name\": \"someValue\",\n" +
+                                "  \"createdBy\": \"hahnml\",\n" +
+                                "  \"type\": \"binary\",\n" +
+                                "  \"contentType\": \"text/plain\"\n" +
+                                "}"))
+                        .build();
+            } else {
+                value = DataManager.getInstance().registerDataValue
+                        (ResourceTransformationUtils.resource2Model
+                                (body));
 
-            DataValue result = ResourceTransformationUtils.model2Resource(value);
+                DataValue result = ResourceTransformationUtils.model2Resource(value);
 
-            UriBuilder builder = uriInfo.getAbsolutePathBuilder();
-            URI valueUri = builder.path(result.getId()).build();
+                UriBuilder builder = uriInfo.getAbsolutePathBuilder();
+                URI valueUri = builder.path(result.getId()).build();
 
-            result.setHref(valueUri.toASCIIString());
+                result.setHref(valueUri.toASCIIString());
 
-            response = Response.created(valueUri).entity(result).build();
+                response = Response.created(valueUri).entity(result).build();
+            }
         } catch (URNSyntaxException e) {
             e.printStackTrace();
 
@@ -65,17 +80,24 @@ public class DataValuesApiServiceImpl extends DataValuesApiService {
     public Response getDataValueDirectly(String dataValueId, SecurityContext securityContext, UriInfo uriInfo) throws NotFoundException {
         Response response = null;
 
+        org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+
         try {
-            org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+            if (value != null) {
+                DataValue result = ResourceTransformationUtils.model2Resource(value);
 
-            DataValue result = ResourceTransformationUtils.model2Resource(value);
+                UriBuilder builder = uriInfo.getAbsolutePathBuilder();
+                URI valueUri = builder.build();
 
-            UriBuilder builder = uriInfo.getAbsolutePathBuilder();
-            URI valueUri = builder.path(result.getId()).build();
+                result.setHref(valueUri.toASCIIString());
 
-            result.setHref(valueUri.toASCIIString());
-
-            response = Response.ok().entity(result).build();
+                response = Response.ok().entity(result).build();
+            } else {
+                response = Response.status(Response.Status.NOT_FOUND).entity(new NotFound().properties(Collections
+                        .singletonList(dataValueId)).message("A Data Value with ID='" + dataValueId + "' is " +
+                        "not available."))
+                        .build();
+            }
         } catch (Exception e) {
             e.printStackTrace();
 
@@ -87,44 +109,27 @@ public class DataValuesApiServiceImpl extends DataValuesApiService {
 
     @Override
     public Response getDataValuesDirectly(Integer limit, String status, SecurityContext securityContext, UriInfo uriInfo) throws NotFoundException {
-        // do some magic!
-        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
-    }
-
-    @Override
-    public Response pullDataValue(String dataValueId, SecurityContext securityContext, UriInfo uriInfo) throws NotFoundException {
         Response response = null;
 
         try {
-            org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+            List<org.trade.core.model.data.DataValue> dataValues = null;
 
-            response = Response.ok(value.getData(), value.getContentType()).header("Content-Length", value.getSize())
-                    .build();
-        } catch (Exception e) {
-            e.printStackTrace();
+            dataValues = DataManager.getInstance().getAllDataValues(limit, status);
 
-            response = Response.serverError().entity(e.getMessage()).build();
-        }
+            List<DataValue> resultList = new ArrayList<>();
+            for (org.trade.core.model.data.DataValue dataValue : dataValues) {
 
-        // TODO: Handle data exchange with streams instead of byte[]
-        // http://stackoverflow.com/questions/10326460/how-to-avoid-outofmemoryerror-when-uploading-a-large-file-using-jersey-client/31140433#31140433
-        // http://stackoverflow.com/questions/23701106/how-jersey-2-client-can-send-input-output-binary-stream-to-server-and-vise-versa/23701359#23701359
-        // http://stackoverflow.com/questions/10587561/password-protected-zip-file-in-java/32253028#32253028
-        // http://stackoverflow.com/questions/3496209/input-and-output-binary-streams-using-jersey/28479669#28479669
+                DataValue result = ResourceTransformationUtils.model2Resource(dataValue);
 
-        return response;
-    }
+                UriBuilder builder = uriInfo.getAbsolutePathBuilder();
+                URI valueUri = builder.path(result.getId()).build();
 
-    @Override
-    public Response pushDataValue(String dataValueId, Long contentLength, byte[] data, SecurityContext securityContext, UriInfo uriInfo) throws NotFoundException {
-        Response response = null;
+                result.setHref(valueUri.toASCIIString());
 
-        try {
-            org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+                resultList.add(result);
+            }
 
-            value.setData(data, contentLength);
-
-            response = Response.ok().build();
+            response = Response.ok().entity(resultList).build();
         } catch (Exception e) {
             e.printStackTrace();
 
@@ -135,8 +140,124 @@ public class DataValuesApiServiceImpl extends DataValuesApiService {
     }
 
     @Override
-    public Response updateDataValueDirectly(String dataValueId, DataValueRequest dataValue, SecurityContext securityContext, UriInfo uriInfo) throws NotFoundException {
-        // do some magic!
-        return Response.ok().entity(new ApiResponseMessage(ApiResponseMessage.OK, "magic!")).build();
+    public Response pullDataValue(String dataValueId, SecurityContext securityContext) throws NotFoundException {
+        Response response = null;
+
+        try {
+            org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+
+            if (value != null) {
+                response = Response.ok(value.getData(), value.getContentType()).header("Content-Length", value.getSize())
+                        .build();
+            } else {
+                response = Response.status(Response.Status.NOT_FOUND).entity(new NotFound().properties(Collections
+                        .singletonList(dataValueId)).message("A Data Value with ID='" + dataValueId + "' is " +
+                        "not available."))
+                        .build();
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+
+            response = Response.serverError().entity(e.getMessage()).build();
+        }
+
+        return response;
+    }
+
+    @Override
+    public Response pushDataValue(String dataValueId, Long contentLength, byte[] data, SecurityContext securityContext) throws NotFoundException {
+        Response response = null;
+
+        try {
+            org.trade.core.model.data.DataValue value = DataManager.getInstance().getDataValue(dataValueId);
+
+            if (value != null) {
+                if (data != null && contentLength != null) {
+                    value.setData(data, contentLength);
+
+                    response = Response.ok().build();
+                } else {
+                    // TODO: Specify usefull message and example request
+                    response = Response.status(Response.Status.BAD_REQUEST).entity(new InvalidInput()
+                            .message("TODO").example("TODO-EXAMPLE"))
+                            .build();
+                }
+            } else {
+                response = Response.status(Response.Status.NOT_FOUND).entity(new NotFound().properties(Collections
+                        .singletonList(dataValueId)).message("A Data Value with ID='" + dataValueId + "' is " +
+                        "not available."))
+                        .build();
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+
+            response = Response.serverError().entity(e.getMessage()).build();
+        }
+
+        return response;
+    }
+
+    @Override
+    public Response updateDataValueDirectly(String dataValueId, DataValueUpdateRequest dataValue, SecurityContext
+            securityContext, UriInfo uriInfo) throws NotFoundException {
+        Response response = null;
+
+        try {
+            boolean exists = DataManager.getInstance().hasDataValue(dataValueId);
+
+            if (exists) {
+                org.trade.core.model.data.DataValue value = DataManager.getInstance().updateDataValue(
+                        dataValueId, dataValue.getName(), dataValue.getContentType(), dataValue.getType());
+
+                DataValue result = ResourceTransformationUtils.model2Resource(value);
+
+                UriBuilder builder = uriInfo.getAbsolutePathBuilder();
+                URI valueUri = builder.build();
+
+                result.setHref(valueUri.toASCIIString());
+
+                response = Response.ok().entity(result).build();
+            } else {
+                response = Response.status(Response.Status.NOT_FOUND).entity(new NotFound().properties(Collections
+                        .singletonList(dataValueId)).message("A Data Value with ID='" + dataValueId + "' is " +
+                        "not available."))
+                        .build();
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+
+            response = Response.serverError().entity(e.getMessage()).build();
+        }
+
+        return response;
+    }
+
+    @Override
+    public Response deleteDataValue(String dataValueId, SecurityContext securityContext) throws NotFoundException {
+        Response response = null;
+
+        try {
+            boolean exists = DataManager.getInstance().hasDataValue(dataValueId);
+
+            if (exists) {
+                org.trade.core.model.data.DataValue value = DataManager.getInstance().deleteDataValue(
+                        dataValueId);
+
+                DataValue result = ResourceTransformationUtils.model2Resource(value);
+
+                response = Response.ok().entity(result).build();
+            } else {
+                response = Response.status(Response.Status.NOT_FOUND).entity(new NotFound().properties(Collections
+                        .singletonList(dataValueId)).message("A Data Value with ID='" + dataValueId + "' is " +
+                        "not available."))
+                        .build();
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+
+            response = Response.serverError().entity(e.getMessage()).build();
+        }
+
+        return response;
     }
 }
